# normgraph

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/samples/: README.md  sample_case_521203.md  sample_case_521203.meta.json
docs/project/: 00_project_brief.md  01_literature_map.md  02_decision_register.md  05_sync_protocol.md  06_legal_methodology_primer.md
docs/project/specs/: C-01_data_spike.md  C-02_repo_bootstrap.md
paper/: .latexmkrc  main.tex
paper/bib/: references.bib
paper/notes/: CHANGELOG.md
paper/sections/: 01_introduction.tex  02_literature.tex  03_method.tex  04_artifact.tex  05_evaluation.tex  06_discussion.tex  07_conclusion.tex
spikes/c01/: c01_output.json  c01_spike.py
src/normgraph/: __init__.py
tests/: test_smoke.py
